# uSonifier2

./: CMakeLists.txt  README.md
resources/: MovingPlane.csd
src/: duo.h~  main.cpp  main.cpp~  pch.h  pch.h~
src/CSoundManager/: CSoundManager.cpp  CSoundManager.cpp~  CSoundManager.h  CSoundManager.h~  ScanTimer.cpp  ScanTimer.h
src/Camera/: Camera.cpp  Camera.h
src/Camera/DUO/: DUOLib.h  duo.h
src/Camera/DUO/PID/: cameractrl.cpp  cameractrl.cpp~  cameractrl.h  cameractrl.h~
src/Scene/: Obstacle.cpp  Obstacle.cpp~  Obstacle.h  Obstacle.h~  Scene.cpp  Scene.cpp~  Scene.h  Scene.h~
src/Stereo/: stereo.cpp  stereo.hpp
src/Stereo/cuda/: common.cuh  cuImproc.cuh  cuImproc_device.cuh  cuStereo.cu  cuStereo.cu~  cuStereo.h  matcher_AEMBMv1.cuh  matcher_AEMBMv1.cuh~  matcher_AEMBMv2.cuh
src/Stereo/dataTypes/: size2d.hpp  view.cpp  view.hpp
src/Stereo/dataTypes/cuda/: cuTypes.cu  cuTypes.h
